lexer_parser/src/test/exempleFile/miniJaja/success/whileInWhile.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du while	*/
/************************/

class whileInWhile {

	main {
        int x = 0;
        while(true){
          while(false){
            while(x==0){
                return x;
            };
          };
        };

	}
}