lexer_parser/src/test/exempleFile/miniJaja/fail/functionNotNamed.mjj
class functionNotNamed {
    int x = 0;

    int (int x){
        return x+34;
    }

    main{
        
    }
}